feat: improve code generation, nullability checking, offset mapping, and issue diagnostics
- Update BasicCodeGenDelegate to handle nullable types (type?) and local variables in for-loops
- Enhance CodeGenUtils with mapOffsetFromTransformedToOriginal using DiffMatchPatch
- Improve NullabilityChecker with constructor javaCode parameter, lambda symbol offset mapping, and final field initialization checks
- Refactor Immutability class to support nullable types and fix related initialization errors
- Remove obsolete ProjectProcessor class
- Add unit tests for TypeInfo, ResolvedChain, FragmentedText, CodeGenContext, and BoilerplateCodeGenerator
- Introduce diff-match-patch library for enhanced text diffing
- Add issue diagnostics handling and related classes